Home view added

--- a/lib/live_view_game_web/templates/home/index.html.leex
+++ b/lib/live_view_game_web/templates/home/index.html.leex
@@ -10,5 +10,5 @@
     <% end %>
   </div>
 
-  <%= Phoenix.HTML.Tag.content_tag(:button, 'Go!', class: "btn", "phx-click": "go") %>
+  <%= content_tag(:button, 'Go!', class: "btn", "phx-click": "go") %>
 </main>
