--- a/lib/live_view_game_web/templates/home/index.html.leex
+++ b/lib/live_view_game_web/templates/home/index.html.leex
@@ -24,8 +24,8 @@
     <%= for {_id, player} <- @state.players do %>
       <li>
         <%= player.name %>
-        <%= if can_attack?(@state, @user_id, player.id) do %>
-          <button phx-click="attack" phx-value-id="<%=player.id %>">Attack</button>
+        <%= if player.id != @user_id && !player.in_battle do %>
+          <button phx-click="start_battle" phx-value-id="<%=player.id %>">Attack</button>
         <% end %>
       </li>
     <% end %>
