--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,9 +3,9 @@
 @import "./phoenix.css";
 @import "../../deps/phoenix_live_view/assets/css/live_view.css";
 
-
 .center {
   text-align: center
+
 }
 
 .two-column {
@@ -16,7 +16,6 @@
 
 .column {
   width: 100%;
-  background: lightblue;
 }
 
 .column + .column {
@@ -24,6 +23,14 @@
 }
 
 .battle {
-  height: 400px
-  /* <div class="battle" style="background: <%= Routes.static_path(@socket, "/images/battle-scene.png") %>"> */
+  width: 239px;
+  height: 270px;
+  background-repeat: no-repeat;
+  margin: 0 auto;
+  margin: 5px auto;
+}
+
+.battle-scene {
+  align-items: flex-end;
+  height: 100%;
 }
