--- a/lib/live_view_game_web/templates/battle/index.html.leex
+++ b/lib/live_view_game_web/templates/battle/index.html.leex
@@ -1,7 +1,7 @@
 <main class="center">
   <h1>Battle!</h1>
   <%= if @is_attacker do %>
-    <h5>You are attacking <%= @player.name %></h5>
+    <h5>You are attacking <%= @opponent.name %></h5>
   <% else %>
     <h5>You are being attacked by <%= @opponent.name %></h5>
   <% end %>
