--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,9 +3,13 @@
 @import "./phoenix.css";
 @import "../../deps/phoenix_live_view/assets/css/live_view.css";
 
+main {
+  max-width: 400px;
+  margin: auto;
+}
+
 .center {
   text-align: center
-
 }
 
 .two-column {
