--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,7 +4,7 @@
 @import "../../deps/phoenix_live_view/assets/css/live_view.css";
 
 main {
-  max-width: 400px;
+  max-width: 600px;
   margin: auto;
 }
 
@@ -37,4 +37,10 @@ main {
 .battle-scene {
   align-items: flex-end;
   height: 100%;
+}
+
+.log {
+  width: 100%;
+  height: 200px;
+  overflow-y: scroll;
 }
