Layout and styling improved

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -9,7 +9,10 @@ main {
 }
 
 .center {
-  text-align: center
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .two-column {
